force-app/main/default/objects/Related_Approvers__c/Related_Approvers__c.object-meta.xml
<CustomObject>
    <label>Related Approvers</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Related Approvers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>