force-app/main/default/objects/Related_Approvers__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application/Booking</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Payment Plan Detail</fullName>
            </value>
            <value>
                <fullName>TDS Recoverable</fullName>
            </value>
            <value>
                <fullName>Transaction Request</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>