force-app/main/default/objects/Related_Approvers__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>PropStrength__Projects__c</referenceTo>
    <relationshipLabel>Related Approvers</relationshipLabel>
    <relationshipName>Related_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>