force-app/main/default/objects/Related_Approvers__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSP To Update</fullName>
            </value>
            <value>
                <fullName>Cancellation/Surrender</fullName>
            </value>
            <value>
                <fullName>Change Customer Status</fullName>
            </value>
            <value>
                <fullName>Interest Waiver</fullName>
            </value>
            <value>
                <fullName>Normal Credit Note</fullName>
            </value>
            <value>
                <fullName>Payment Plan Approval</fullName>
            </value>
            <value>
                <fullName>Demand Reversal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>